# stock-crawler

./: .env.sample  .gitignore  Dockerfile  README.md  chip_stats.py  get-daily-message.py  get_daily_message.py  get_stock_chips.py  pyproject.toml  sample.env
broadcast/: .dockerignore  .env.sample  .gitignore  Dockerfile  package.json
broadcast/src/: broadcast.js  database.js  excludeBigCompanyCode.js
data/: 台灣證交所證券辨識號碼一覽表.xlsx
